--- a/exercises/83 - Security/package.json
+++ b/exercises/83 - Security/package.json
@@ -3,13 +3,14 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "type": "module",
   "scripts": {
     "start": "parcel index.html"
   },
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dompurify": "^2.0.7"
+    "dompurify": "^2.4.0"
   },
   "devDependencies": {
     "parcel": "2.0.1"
